tests/ui-stable/inline_assert_size_eq_failed.stderr
error[E0080]: evaluation of constant value failed
 --> tests/ui-stable/inline_assert_size_eq_failed.rs:4:1
  |
4 | #[inline_assert_size_eq(1)]
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^ attempt to compute `0_usize - 1_usize`, which would overflow
  |
  = note: this error originates in the macro `static_assertions::const_assert` which comes from the expansion of the attribute macro `inline_assert_size_eq` (in Nightly builds, run with -Z macro-backtrace for more info)
